test/src/e2e_vm_tests/test_programs/should_fail/superabi_duplicate_methods1/src/main.sw
// Inheritance graph:
//          MySuperAbi
//              |
//            MyAbi

contract;

abi MySuperAbi {
    fn method();
}

// For now we forbid ABIs to have methods with the same name
// as their superABIs
abi MyAbi : MySuperAbi {
    fn method();
}
